fix: adjust the height of the form on small screens

--- a/blocks/popup-application/popup-application.css
+++ b/blocks/popup-application/popup-application.css
@@ -14,4 +14,5 @@
   font-size: 18px;
   line-height: 140%;
   letter-spacing: 0%;
+  overflow-y: auto;
 }
