--- a/blocks/popup-application/popup-application__form/popup-application__form.css
+++ b/blocks/popup-application/popup-application__form/popup-application__form.css
@@ -6,10 +6,19 @@
   background-color: #18191E;
   color: #F4F4F4;
   box-sizing: border-box;
+  
 }
 
 @media (max-width: 1919px) {
   .popup-application__form {
     padding: 50px 20px;
+  }
+}
+
+@media (max-height: 1000px) {
+  .popup-application__form {
+    padding: 20px;
+    max-height: 100vh;
+    overflow-y: auto;
   }
 }
